Added convars for allowing knife/nade kills to count towards levels.

--- a/resource/source-python/translations/gungame/config/custom_plugins/gg_chicken_hunt.ini
+++ b/resource/source-python/translations/gungame/config/custom_plugins/gg_chicken_hunt.ini
@@ -1,2 +1,10 @@
 [max_chickens]
 en = "The maximum number of chickens on the map at any given time."
+
+
+[allow_nade_kills]
+en = "Enable/Disable allowing nade kills on chickens to count towards leveling up when not on nade level."
+
+
+[allow_knife_kills]
+en = "Enable/Disable allowing knife kills on chickens to count towards leveling up when not on knife level."
