--- a/resource/source-python/translations/gungame/rules/custom_plugins/gg_chicken_hunt.ini
+++ b/resource/source-python/translations/gungame/rules/custom_plugins/gg_chicken_hunt.ini
@@ -2,5 +2,5 @@
 en = "Chicken Hunt"
 
 
-[gg_chicken_hunt:]
-en = ""
+[gg_chicken_hunt:Chickens]
+en = "Instead of killing other players to level up, players must kill chickens."
